@@ -1,27 +1,20 @@
+// com/car/carservices/util/TimeSlotUtil.java
 package com.car.carservices.util;
 
 import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 
-public class TimeSlotUtil {
+public final class TimeSlotUtil {
+    private TimeSlotUtil(){}
+    private static final DateTimeFormatter HHMM = DateTimeFormatter.ofPattern("HH:mm");
 
-    public static List<String> generateTimeSlots(String workingHours) {
-        if (workingHours == null || !workingHours.contains("-")) {
-            return Collections.emptyList();
+    public static List<String> slotsInclusive(LocalTime from, LocalTime to, int stepMinutes) {
+        if (from == null || to == null) return List.of();
+        List<String> out = new ArrayList<>();
+        for (LocalTime t = from; !t.isAfter(to); t = t.plusMinutes(stepMinutes)) {
+            out.add(t.format(HHMM));
         }
-
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("hh:mm a", Locale.ENGLISH);
-        String[] parts = workingHours.split("-");
-
-        LocalTime start = LocalTime.parse(parts[0].trim(), formatter);
-        LocalTime end = LocalTime.parse(parts[1].trim(), formatter);
-
-        List<String> slots = new ArrayList<>();
-        while (!start.isAfter(end.minusMinutes(30))) {
-            slots.add(start.format(formatter));
-            start = start.plusMinutes(30);
-        }
-        return slots;
+        return out;
     }
 }
